WordRonin marked complete + added TestFlight link

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     />
                     <h3>WordRonin</h3>
                   </div>
-                  <span class="badge inprogress">Complete</span>
+                  <span class="badge complete">Complete</span>
                 </div>
 
                 <p class="muted">
