--- a/alfibat.html
+++ b/alfibat.html
@@ -1,3 +1,4 @@
+<!-- alfibat.html -->
 <!doctype html>
 <html lang="en">
   <head>
@@ -14,19 +15,15 @@
   <body>
     <header class="site-header">
       <div class="container header-row">
-        <a class="logo" href="./index.html#projects" aria-label="Back to projects">← Projects</a>
-
-        <nav class="nav" aria-label="Primary">
-          <a href="./index.html#about">About</a>
-          <a href="./index.html#skills">Skills</a>
-          <a href="./index.html#connect">Connect</a>
-        </nav>
+        <a class="logo" href="index.html">Ali Aljahmi</a>
       </div>
     </header>
 
     <main id="top">
       <section class="hero">
         <div class="container">
+          <a href="index.html#projects" class="btn ghost">← Back</a>
+
           <p class="eyebrow">iPad App · Swift Student Challenge</p>
           <h1>AlfiBaT</h1>
 
