--- a/wordronin.html
+++ b/wordronin.html
@@ -44,6 +44,11 @@
       </a>
     </div>
 
+    <h2 style="margin-top:40px;">Role and Ownership</h2>
+
+    <p>
+      WordRonin was built in a small team at the Apple Developer Academy, where I served as Project Manager and Lead Developer. I helped define the product direction, aligned design and engineering decisions, and led gameplay implementation in Swift and SpriteKit. The project required balancing pacing, engagement, and accessibility while shipping a playable experience on iPad.
+    </p>
 
     <h2 style="margin-top:40px;">Gameplay Screens</h2>
 
@@ -53,13 +58,10 @@
       <img src="./assets/wordronin/wordroninlistenscreen.png" alt="WordRonin Listen Mode">
     </div>
 
-    <h2 style="margin-top:40px;">How I Built It</h2>
+    <h2 style="margin-top:40px;">Build Notes</h2>
 
     <p>
-      WordRonin was built using SpriteKit for gameplay and Swift for overall structure.
-      We iterated heavily on pacing, scoring, and interaction design to make the
-      experience feel fast but not overwhelming. Building Listen Mode pushed us
-      to rethink interaction entirely and design a game that works beyond visuals.
+      We iterated heavily on pacing, scoring logic, and interaction design to make the experience feel fast but not overwhelming. Building Listen Mode pushed us to rethink interaction entirely and design a version of the game that works through audio cues rather than relying solely on visuals. The result was a more inclusive and thoughtfully designed experience.
     </p>
 
   </div>
