--- a/index.html
+++ b/index.html
@@ -176,47 +176,58 @@
               </div>
             </article>
 
-            <a
-              href="https://aliatumich.github.io/AimGame/"
-              target="_blank"
-              rel="noreferrer"
-              class="card-link"
+            <article
+              class="card card-clickable"
+              role="link"
+              tabindex="0"
+              data-href="https://aliatumich.github.io/AimGame/"
+              aria-label="Open AimGame live demo"
             >
-              <article class="card">
-                <div class="card-top project-title">
-                  <div class="project-name">
-                    <img
-                      src="./assets/aimgame-logo.png"
-                      alt="AimGame logo"
-                      class="project-logo logo-wide"
-                    />
-                    <h3>AimGame</h3>
-                  </div>
-                  <span class="badge complete">Complete</span>
+              <div class="card-top project-title">
+                <div class="project-name">
+                  <img
+                    src="./assets/aimgame-logo.png"
+                    alt="AimGame logo"
+                    class="project-logo logo-wide"
+                  />
+                  <h3>AimGame</h3>
                 </div>
+                <span class="badge complete">Complete</span>
+              </div>
 
-                <p class="muted">
-                  Web based aim trainer focused on input behavior and measurable performance feedback.
-                </p>
+              <p class="muted">
+                Web based aim trainer focused on input behavior, configuration,
+                and measurable performance feedback.
+              </p>
 
-                <div class="meta">
-                  <span class="pill">JavaScript</span>
-                  <span class="pill">HTML</span>
-                  <span class="pill">CSS</span>
-                </div>
+              <div class="meta">
+                <span class="pill">JavaScript</span>
+                <span class="pill">HTML</span>
+                <span class="pill">CSS</span>
+              </div>
 
-                <p class="small">
-                  Outcome: Shipped a live demo with a tight settings to performance
-                  feedback loop.
-                </p>
+              <p class="small">
+                Outcome: Shipped a live demo with settings that directly affect measurable performance.
+              </p>
 
-                <div class="links">
-                  <span>Live Demo</span>
-                  <span>·</span>
-                  <span>GitHub</span>
-                </div>
-              </article>
-            </a>
+              <div class="links">
+                <a
+                  href="https://aliatumich.github.io/AimGame/"
+                  target="_blank"
+                  rel="noreferrer"
+                  class="card-link-inline"
+                  aria-label="Open AimGame live demo"
+                >Live Demo</a>
+
+                <a
+                  href="https://github.com/AliAtUmich/AimGame"
+                  target="_blank"
+                  rel="noreferrer"
+                  class="card-link-inline"
+                  aria-label="Open AimGame source code on GitHub"
+                >Source Code</a>
+              </div>
+            </article>
           </div>
         </div>
       </section>
